# py_load_opentargets

./: .gitignore  FRD.md  FRD_vs_Implementation_Analysis.md  NOTICE  README.md  create_parquet.py  explore_versions.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  configuration.md  getting_started.md  index.md  vignette.md
py_load_opentargets/: README.md  pyproject.toml
py_load_opentargets/py_load_opentargets/: core.py
py_load_opentargets/tests/: test_core.py
src/py_load_opentargets/: __init__.py  api.py  cli.py  config.py  data_acquisition.py  default_config.toml  loader.py  logging_utils.py  orchestrator.py  validator.py
src/py_load_opentargets/backends/: __init__.py  postgres.py
tests/: conftest.py  test_api.py  test_checksum.py  test_cli_integration.py  test_config.py  test_config_extended.py  test_data_acquisition.py  test_data_acquisition_integration.py  test_discovery_feature.py  test_download_integration.py  test_end_to_end.py  test_foreign_key_handling.py  test_loader.py  test_new_checksum_feature.py  test_new_cli_integration.py  test_orchestrator.py  test_parallel_download.py  test_postgres_backend.py  test_postgres_backend_unit.py  test_robustness.py  test_s3_support.py  test_schema_mapping.py  test_validator.py
tests/resources/: drugwarnings.parquet
