[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_load_opentargets"
version = "0.1.0"
authors = [
    { name = "Gowtham Rao", email = "rao@ohdsi.org" },
]
description = "A package to efficiently load Open Targets data into a relational database."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fsspec",
    "pyarrow",
    "polars",
    "psycopg[binary]",
    "click",
    "tomli; python_version < '3.11'",
    "python-json-logger",
]

[project.optional-dependencies]
gcs = ["gcsfs"]
s3 = ["s3fs"]
all = ["gcsfs", "s3fs"]
test = [
    "pyyaml==6.0.1",
    "cython<3",
    "testcontainers[postgres]>=4.5.0",
    "pytest>=7.4.2",
    "pytest-mock>=3.11.1",
    "ruff>=0.0.292",
    "moto[s3]>=4.2.6",
    "boto3>=1.28.57",
    "s3fs>=2023.9.0",
    "fsspec>=2023.9.0",
    "toml>=0.10.2",
    "gcsfs>=2023.9.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "pytest-cov",
]

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.6"

[project.urls]
"Homepage" = "https://github.com/ohdsi/py_load_opentargets" # Placeholder
"Bug Tracker" = "https://github.com/ohdsi/py_load_opentargets/issues" # Placeholder

[project.scripts]
py_load_opentargets = "py_load_opentargets.cli:cli"

[project.entry-points."py_load_opentargets.backends"]
postgres = "py_load_opentargets.backends.postgres:PostgresLoader"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "src"
markers = [
    "integration: marks tests as integration tests",
]

[tool.hatch.envs.test]
features = ["test"]
dev-mode = true

[tool.hatch.envs.test.scripts]
run = [
  "pip install --force-reinstall -e .",
  "pytest {args}",
]

[tool.hatch.scripts]
docs = "mkdocs serve"
