[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_load_opentargets"
version = "0.0.1"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Python package to download and load Open Targets data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0",
    "pyarrow>=1.0",
    "requests>=2.0",
    "beautifulsoup4>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/example/py_load_opentargets"
"Bug Tracker" = "https://github.com/example/py_load_opentargets/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
